fix missing output in run object response
